# halo2-test

./: .gitignore  Cargo.toml  README.md
src/: commitment.rs  constants.rs  encryption.rs  keys.rs  lib.rs  main.rs  merkle.rs  note.rs  nullifier.rs
src/circuit/: action.rs  gadgets.rs  mod.rs
