[package]
name = "halo2-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Halo2 proof system (same as Orchard uses)
halo2_proofs = "0.3"
halo2_gadgets = "0.3"

# Field and curve operations
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"
rand_core = "0.6"

# Utilities
subtle = "2.5"
bitvec = "1.0"

# For cleaner error handling
thiserror = "1.0"

# Note encryption (AEAD)
chacha20poly1305 = "0.10"
blake2 = "0.10"

# Serialization
byteorder = "1.5"
